<resources>
    <string name="app_name">Мои записи</string>
    <string name="settings">Настройки</string>
    <string name="notes">Заметки</string>
    <string name="shop_List">Список покупок</string>
    <string name="new_Item">Новый элемент</string>
    <string name="title_hint">Тема</string>
    <string name="description_hint">Описание</string>
    <string name="new_list">Новый лист</string>
    <string name="list_name">Имя нового элемента</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="update">Обновить</string>
    <string name="nameTov">Наименование товара</string>
    <string name="update_name">Обновление названия</string>
    <string name="general">Главные</string>
    <string name="chose_note_style">Стиль расстановки заметок</string>
    <string name="chose_time_style">Формат времени</string>
    <string name="remove_ads">Remove ads</string>
    <string name="remove_ads_summary">Remove all ads from this app</string>
    <string name="theme_setting">Настройка темы</string>
    <string name="chose_theme">Выбор темы</string>
    <string name="note_text_setting">Размер текста заметок</string>
    <string name="title_text_setting">Размер текста темы</string>
    <string name="content_text_setting">Размер текста заметки</string>
</resources>