<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory android:title="@string/general">

        <ListPreference
            android:defaultValue="Linear"
            android:entries="@array/note_style_array"
            android:entryValues="@array/note_style_values"
            android:key="note_style_key"
            android:icon="@drawable/ic_style"
            app:useSimpleSummaryProvider="true"
            android:title="@string/chose_note_style" />
        <ListPreference
            android:defaultValue="HH:mm:ss - dd/MM/yyyy"
            android:entries="@array/time_format_array"
            android:entryValues="@array/time_format_values"
            android:icon="@drawable/ic_baseline_timelapse_24"
            app:useSimpleSummaryProvider="true"
            android:key="time_format_key"
            android:title="@string/chose_time_style" />
        <Preference
            android:title="@string/remove_ads"
            android:summary="@string/remove_ads_summary"
            android:icon="@drawable/ic_baseline_remove_circle_24"
            />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/theme_setting">

        <ListPreference
            android:defaultValue="red"
            android:entries="@array/chose_style_array"
            android:entryValues="@array/chose_style_values"
            app:useSimpleSummaryProvider="true"
            android:key="theme_key"
            android:title="@string/chose_theme"
            android:icon="@drawable/ic_baseline_subject_24"/>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/note_text_setting">

        <ListPreference
            android:defaultValue="16"
            android:entries="@array/text_size_array"
            android:entryValues="@array/text_size_values"
            android:key="title_size_key"
            android:icon="@drawable/ic_baseline_format_size_24"
            app:useSimpleSummaryProvider="true"
            android:title="@string/title_text_setting" />
        <ListPreference
            android:defaultValue="14"
            android:entries="@array/text_size_array"
            android:entryValues="@array/text_size_values"
            android:key="content_size_key"
            app:useSimpleSummaryProvider="true"
            android:icon="@drawable/ic_baseline_format_size_24"
            android:title="@string/content_text_setting" />
    </PreferenceCategory>
</PreferenceScreen>