<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/shoplist"
        android:title="@string/shop_List"
        android:icon="@drawable/ic_baseline_list_24"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/notes"
        android:title="@string/notes"
        android:icon="@drawable/ic_baseline_note_24"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/settings"
        android:title="@string/settings"
        android:icon="@drawable/ic_baseline_settings_24"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/newItem"
        android:title="@string/new_Item"
        android:icon="@drawable/ic_baseline_note_add_24"
        app:showAsAction="ifRoom"/>
</menu>